--- a/css/main.css
+++ b/css/main.css
@@ -234,16 +234,15 @@ margin-top: -30%;
 .subdiv3 {
      padding-top: 13%;
 }
+.p {
+    padding-top: 10px;
+    padding-left: 10px;
+}
 .subt2 {
     font-size: 40px;
     color: white;
     background-color: black; 
 }
-.p {
-    padding-top: 10px;
-    padding-left: 10px;
-}
-
 .span {
     padding-left: 0.3em;  
 }
@@ -261,7 +260,7 @@ div {
     font-size: 70px;
 }
 
-.subt9 {
+.subt3 {
       color: white;
     background-color: black;
     font-size: 70px;
@@ -298,7 +297,7 @@ div {
 .span1 {
     padding-left: 0.1em;
 }
-@media screen and (min-width:200px) and (max-width:865px)
+@media screen and (min-width:380px) and (max-width:865px)
 {
     #yak1 
 {   
@@ -483,7 +482,7 @@ padding-left: 0%;
 margin-top: 0%;
 }
 }
-@media screen and (min-width:200px) and (max-width:500px)
+@media screen and (min-width:380px) and (max-width:500px)
 {
     .content {
     width:72%;
@@ -529,3 +528,297 @@ margin-top: 0%;
     
 }
 }
+@media screen and (max-width:725px)
+{
+#menu
+{   
+    height: 50px;
+    position: relative;  
+    margin-top: 103%;
+    
+}
+}
+@media screen and (min-width:294px) and (max-width:425px)
+{
+    #yak1 
+{   
+    margin-top: 40%;
+    margin-left: 0%;
+    margin-right: 0%;
+    font-family: 'Lato', sans-serif;
+    position: relative;
+    text-align: center;
+    height: 500px;
+    background-image:url(/img/photo_2018-04-26_06-37-23.jpg);
+    z-index: 20;
+    background-attachment: fixed;
+    background-position: center;
+ 
+}
+    #yak2
+{
+    margin-left: 0%;
+    margin-right: 0%;
+    font-family: 'Lato', sans-serif;
+    position: relative;
+    text-align: center;
+    height: 500px;
+    background-position: center;
+    background-image:url(/img/photo_2018-05-03_17-04-23.jpg);
+    background-attachment: fixed;
+    z-index: 20;
+}
+    #yak3
+{
+    margin-left: 0%;
+    margin-right: 0%;
+    font-family: 'Lato', sans-serif;
+    position: relative;
+    text-align: center;
+    height: 400px;
+    background-image:url(/img/photo_2018-05-01_15-41-18.jpg);
+    background-repeat: no-repeat;
+    z-index: 20;
+    background-attachment: fixed;
+  
+}
+#menu
+{   
+    height: 50px;
+    position: relative;  
+    margin-top: 20%;
+    
+}
+.subt2 {
+    font-size:20px;
+    color: white;
+    background-color: black; 
+    height: 40px;
+}
+    .p {
+    width: 20px;
+    height: 20px;
+    padding-top: 10px;
+    padding-left: 10px;
+}
+    .subt1
+    {
+        margin-top: 1%
+    }
+    .subdiv2
+    {
+        padding-top: -11%
+    }
+    .instagram,.telegram,.tumblr
+    {
+        width: 33.3333333%;
+        position: relative;
+  float: left;
+        
+    }
+    .subt2
+    {
+        height: 40px;
+    position: relative;
+    width: 100%;
+    z-index: 600;
+    display: block;
+    margin-top: 10%;
+    }
+    .span
+    {
+        padding-left: 0em; 
+    }
+    .follow
+    {
+        font-size: 30px;
+         padding-top: 2%;
+         
+    }
+    .mymail
+    {
+        font-size: 30px;
+        padding-top: 5%;
+    }
+      .subt1
+    {    
+        margin-top: 23%;
+        font-size:40px;
+    }
+    #back-top {
+position:absolute;
+display: none;
+padding-left: 00%;
+margin-top: 200%;
+}
+    .listnav > li a {
+    padding-left: 0px;
+    padding-right: 25px;
+    height: 40px;
+    text-align: center;
+    margin-top:0%;
+        width: 100%;
+    -webkit-transition-timing-function: ease;
+    -webkit-transition-duration: 150ms;
+    -moz-transition-timing-function: ease;
+    -moz-transition-duration: 150ms;
+    font-size: 17px;
+    background-color: transparent;
+    
+}
+    #menu > ul
+{
+    margin-top: 70%;;
+    padding-right: 45px;
+    display: block;
+    list-style-type: none;
+    text-decoration: none;
+     text-align: center;
+}
+    .content {
+    
+    position: absolute;
+    top: 20%;
+    left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+    height: 43px;
+        width: 90%;
+    overflow: hidden;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    line-height: 40px;
+    color: black;
+    background-color: white;
+    }
+    .listnav
+    {
+        text-align: center;
+    }
+    .content__container {
+    font-weight: 500;
+    overflow: hidden;
+    height: 120px;
+}
+
+.content__container__text {
+    display: inline;
+    float: left;
+    margin: 0;
+}
+.content__container__list {
+       margin-top: 0;
+    padding-left: 85px;
+    text-align: left;
+    list-style: none;
+}    
+.content__container__list__item {
+    line-height: 40px;
+    margin: 0;
+}
+
+
+@-webkit-keyframes opacity {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+@-webkit-keyframes change {
+  0%, 12.66%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    -webkit-transform: translate3d(0, 0%, 0);
+            transform: translate3d(0, 0%, 0);
+  }
+  33.32%,45.98% {
+    -webkit-transform: translate3d(0, 0%, 0);
+            transform: translate3d(0, 0%, 0);
+  }
+  49.98%,62.64% {
+    -webkit-transform: translate3d(0, 0%, 0);
+            transform: translate3d(0, 0%, 0);
+  }
+  66.64%,79.3% {
+    -webkit-transform: translate3d(0, 0%, 0);
+            transform: translate3d(0, 0%, 0);
+  }
+  83.3%,95.96% {
+    -webkit-transform: translate3d(0, 0%, 0);
+            transform: translate3d(0, 0%, 0);
+  }
+}
+@keyframes opacity {
+  0%, 100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+@keyframes change {
+  0%, 12.66%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    -webkit-transform: translate3d(0, 0%, 0);
+            transform: translate3d(0, 0%, 0);
+  }
+  33.32%,45.98% {
+    -webkit-transform: translate3d(0, 0%, 0);
+            transform: translate3d(0, 0%, 0);
+  }
+  49.98%,62.64% {
+    -webkit-transform: translate3d(0, 0%%, 0);
+            transform: translate3d(0, 0%%, 0);
+  }
+  66.64%,79.3% {
+    -webkit-transform: translate3d(0, 0%%, 0);
+            transform: translate3d(0, 0%%, 0);
+  }
+  83.3%,95.96% {
+    -weebkit-transform: translate3d(0, 0%%, 0);
+            transform: translate3d(0, 0%%, 0);
+  }
+}
+}
+@media and screen and (min-width:425px) and (max-width:527px)
+{
+.listnav > li a {
+    padding-left: 12px;
+    padding-right: 12px;
+    display: flex;
+    height: 40px;
+    text-align: center;
+    padding-top:2%;
+    -webkit-transition-timing-function: ease;
+    -webkit-transition-duration: 150ms;
+    -moz-transition-timing-function: ease;
+    -moz-transition-duration: 150ms;
+    font-size: 17px;
+    background-color: transparent;
+    
+}
+#menu > ul
+{
+    padding-top: 12px;
+    padding-right: 12px;
+    justify-content: center;
+    display: flex;
+    list-style-type: none;
+    text-decoration: none;
+}
+#menu
+{   
+    height: 50px;
+    position: relative;
+    margin-top: 52%;
+    
+}
+}
+
