--- a/css/main.css
+++ b/css/main.css
@@ -538,7 +538,7 @@ margin-top: 0%;
     
 }
 }
-@media screen and (min-width:294px) and (max-width:425px)
+@media handheld and (min-width:294px) and (max-width:425px)
 {
     #yak1 
 {   
@@ -787,7 +787,7 @@ margin-top: 200%;
   }
 }
 }
-@media and screen and (min-width:425px) and (max-width:527px)
+@media handheld and (min-width:425px) and (max-width:527px)
 {
 .listnav > li a {
     padding-left: 12px;
