--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,8 @@ margin-top: -30%;
     background-color: black; 
 }
 .span {
-    padding-left: 0.3em;  
+    padding-left:0.3em;  
+    font-size: 30px;
 }
 div {
     text-align: center;
@@ -296,6 +297,7 @@ div {
 }
 .span1 {
     padding-left: 0.1em;
+    font-size: 30px;
 }
 @media screen and (min-width:380px) and (max-width:865px)
 {
@@ -538,7 +540,7 @@ margin-top: 0%;
     
 }
 }
-@media handheld and (min-width:294px) and (max-width:425px)
+@media screen and (min-width:294px) and (max-width:425px)
 {
     #yak1 
 {   
@@ -787,7 +789,7 @@ margin-top: 200%;
   }
 }
 }
-@media handheld and (min-width:425px) and (max-width:527px)
+@media and screen and (min-width:425px) and (max-width:527px)
 {
 .listnav > li a {
     padding-left: 12px;
