--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 
-body {
+
+/* css destroiyer */
+
+/* common styles */
+
+body
+{
     padding: 0;
     margin:0;
     background-image: url(/img/photo_2018-05-01_15-40-30.jpg);
@@ -8,7 +14,26 @@ body {
     background-attachment: fixed;
     background-color: black;
 }
-.content {
+div
+{
+    text-align: center;
+}
+
+/* end common styles */
+
+
+/* * */
+
+
+/* upper slider */
+
+#yak4
+{
+    position: absolute;
+    top:0%;
+}
+.content
+{
     position: absolute;
     top: 40%;
     left: 51%;
@@ -22,18 +47,21 @@ body {
     color: black;
     background-color: white;
 }
-.content__container {
+.content__container
+{
     font-weight: 500;
     overflow: hidden;
     height: 120px;
 }
 
-.content__container__text {
+.content__container__text
+{
     display: inline;
     float: left;
     margin: 0;
 }
-.content__container__list {
+.content__container__list
+{
        margin-top: 0;
     padding-left: 85px;
     text-align: left;
@@ -45,13 +73,16 @@ body {
     animation-duration: 9s;
     animation-iteration-count: infinite;
 }    
-.content__container__list__item {
+.content__container__list__item
+{
     line-height: 40px;
     margin: 0;
 }
 
+/* animation upper slider */
 
-@-webkit-keyframes opacity {
+@-webkit-keyframes opacity
+{
   0%, 100% {
     opacity: 0;
   }
@@ -59,7 +90,8 @@ body {
     opacity: 1;
   }
 }
-@-webkit-keyframes change {
+@-webkit-keyframes change
+{
   0%, 12.66%, 100% {
     -webkit-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
@@ -85,7 +117,8 @@ body {
             transform: translate3d(0, -25%, 0);
   }
 }
-@keyframes opacity {
+@keyframes opacity
+{
   0%, 100% {
     opacity: 0;
   }
@@ -93,7 +126,8 @@ body {
     opacity: 1;
   }
 }
-@keyframes change {
+@keyframes change
+{
   0%, 12.66%, 100% {
     -webkit-transform: translate3d(0, 0, 0);
             transform: translate3d(0, 0, 0);
@@ -119,34 +153,21 @@ body {
             transform: translate3d(0, -25%, 0);
   }
 }
-/* end */
-a {
-    list-style: none;
-    color: #c71d26;
-    list-style-type: none;
-    text-decoration: none;
-    font-family: 'Lato', sans-serif;
-    letter-spacing: 2px;
-}
 
-.listnav > li a {
-    padding-left: 70px;
-    padding-right: 70px;
-    display: flex;
-    height: 40px;
-    text-align: center;
-    padding-top:4%;
-    -webkit-transition-timing-function: ease;
-    -webkit-transition-duration: 150ms;
-    -moz-transition-timing-function: ease;
-    -moz-transition-duration: 150ms;
-    font-size: 17px;
+/* end upper slider css */
 
+
+/* all other content */
+
+
+/* menu */
+
+#menu
+{   
+    height: 50px;
+    position: relative;
+    margin-top: 52%;
     
-}
-.listnav > li a:hover {
-   background-color: white;
-      transition: 0.2s ease;
 }
 #menu > ul
 {
@@ -157,13 +178,48 @@ a {
     list-style-type: none;
     text-decoration: none;
 }
-#menu
-{   
-    height: 50px;
-    position: relative;
-    margin-top: 52%;
-    
+.listnav > li a
+{
+    padding-left: 70px;
+    padding-right: 70px;
+    display: flex;
+    height: 40px;
+    text-align: center;
+    padding-top:4%;
+    -webkit-transition-timing-function: ease;
+    -webkit-transition-duration: 150ms;
+    -moz-transition-timing-function: ease;
+    -moz-transition-duration: 150ms;
+    font-size: 17px;  
 }
+.listnav > li a:hover
+{
+   background-color: white;
+      transition: 0.2s ease;
+}
+a
+{
+    list-style: none;
+    color: #c71d26;
+    list-style-type: none;
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 2px;
+}
+
+/* end menu css */
+
+
+/* * */
+
+
+/* blocks with content */
+
+
+/* * */
+
+
+/*first block*/
 
 #yak1 
 {   margin-top: 3%;
@@ -179,33 +235,30 @@ a {
     background-position: center;
  
 }
-
-.subdiv {
+.subdiv 
+{
     z-index: 22;
     padding-top: 40%;
 }
-
-.subt {
+.subt2
+{
+    font-size: 60px;
     color: white;
     background-color: black;
-    font-size: 70px;
-    
+    display: flex;
+    justify-content: center;
 }
 
-#back-top {
-position:fixed;
-display: none;
-padding-left: 78%;
-margin-top: -30%;
-}
-
-.subdiv2 {
-    z-index: 22;
-    padding-top: 23%;
-}
+/* end first block css */
 
 
-#yak2 {
+/* * */
+
+
+/* second block */
+
+#yak2
+{
     margin-right: 21.4%;
     margin-left: 21.4%;
     font-family: 'Lato', sans-serif;
@@ -217,6 +270,26 @@ margin-top: -30%;
     background-attachment: fixed;
     z-index: 20;
 }
+.subdiv2
+{
+    z-index: 22;
+    padding-top: 23%;
+}
+.subt1
+{
+        color: white;
+    background-color: black;
+    font-size: 70px;
+}
+
+/* end second block css */
+
+
+/* * */
+
+
+/* third block */
+
 #yak3
 {
     margin-right: 21.4%;
@@ -225,60 +298,87 @@ margin-top: -30%;
     position: relative;
     text-align: center;
     height: 950px;
-    background-image:url(/img/photo_2018-05-01_15-41-18.jpg);
+    background-image:url(/img/pinksky.jpg);
     background-repeat: no-repeat;
     z-index: 20;
     background-attachment: fixed;
     background-position: center;
 }
-.subdiv3 {
+.subdiv3
+{
      padding-top: 13%;
 }
-.p {
-    padding-top: 10px;
-    padding-left: 10px;
-}
-.subt2 {
+.subt2
+{
     font-size: 60px;
     color: white;
-    background-color: black; 
+    background-color: black;
+    display: flex;
+    justify-content: center;
 }
-.span {
+.instagram,.tumblr,.telegram
+{
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-bottom: 5%;
+
+}
+.span
+{
     padding-left:0.3em;  
     font-size: 30px;
 }
-.mailp
+#a
 {
-    padding-top:2%;
-    height: 1%;
-}
-div {
-    text-align: center;
-}
-
-#a {
     color: white;
     letter-spacing: 0px;
 }
-.subt1 {
-        color: white;
-    background-color: black;
-    font-size: 70px;
+.p
+{
+    padding-top: 10px;
+    padding-left: 10px;
+    width: 120px;
+    height: 120px;
 }
 
-.subt3 {
+/* inner mail block */
+
+.subt3
+{
       color: white;
     background-color: black;
     font-size: 70px;
 }
-
-#yak4 {
-    position: absolute;
-    top:0%;
+.mailp
+{    
+    margin-top: 12%;
+    padding-top:2%;
+    height: 1%;
 }
 .mymail
 {
     padding-top: 4%;
+}
+.span1
+{
+    padding-left: 0.1em;
+    font-size: 30px;
+    padding-top: 
+}
+
+/* end third block css */
+
+
+/* * */
+
+
+/* hidden nav menu */
+
+#back-top {
+position:fixed;
+display: none;
+padding-left: 78%;
+margin-top: -30%;
 }
 .l
 {   height: 2em;
@@ -304,10 +404,15 @@ div {
     padding-left: 8%;
     padding-top: 5%;
 }
-.span1 {
-    padding-left: 0.1em;
-    font-size: 30px;
-}
+
+/* end hidden nav menu */
+
+
+/* * */
+
+
+/* responsive media */
+
 @media screen and (min-width:380px) and (max-width:865px)
 {
     #yak1 
@@ -346,7 +451,7 @@ div {
     position: relative;
     text-align: center;
     height: 550px;
-    background-image:url(/img/photo_2018-05-01_15-41-18.jpg);
+    background-image:url(/img/pinksky.jpg);
     background-repeat: no-repeat;
     z-index: 20;
     background-attachment: fixed;
@@ -587,7 +692,7 @@ margin-top: 100%;
     position: relative;
     text-align: center;
     height: 400px;
-    background-image:url(/img/photo_2018-05-01_15-41-18.jpg);
+    background-image:url(/img/pinksky.jpg));
     background-repeat: no-repeat;
     z-index: 20;
     background-attachment: fixed;
@@ -798,38 +903,5 @@ margin-top: 200%;
   }
 }
 }
-@media and screen and (min-width:425px) and (max-width:527px)
-{
-.listnav > li a {
-    padding-left: 12px;
-    padding-right: 12px;
-    display: flex;
-    height: 40px;
-    text-align: center;
-    padding-top:2%;
-    -webkit-transition-timing-function: ease;
-    -webkit-transition-duration: 150ms;
-    -moz-transition-timing-function: ease;
-    -moz-transition-duration: 150ms;
-    font-size: 17px;
-    background-color: transparent;
-    
-}
-#menu > ul
-{
-    padding-top: 12px;
-    padding-right: 12px;
-    justify-content: center;
-    display: flex;
-    list-style-type: none;
-    text-decoration: none;
-}
-#menu
-{   
-    height: 50px;
-    position: relative;
-    margin-top: 52%;
-    
-}
-}
 
+/* end responsive media */
